# vanilka_webapp_ver3

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agent/rules/: env.md
src/: __init__.py  config.py  main.py
src/bot/: __init__.py  handlers.py  middlewares.py
src/services/: __init__.py  history_logger.py  knowledge_base.py  llm_service.py  transcribe_service.py
src/storage/: __init__.py  dialog_history.py  sqlite_history.py
